<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mmujerrseis">
    <Button
        android:id="@+id/regresar"
        android:layout_width="wrap_content"
        android:backgroundTint="#eed4bc"
        android:text="@string/texto65"
        android:textColor="#6E3500"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    </Button>

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="112dp"
        android:text="Rosa Parks"
        android:textAlignment="center"
        android:textColor="#AEE449E4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="404dp"
        android:layout_height="182dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"

        android:src="@drawable/mujerrseis"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp" />

    <LinearLayout
        android:layout_width="397dp"
        android:layout_height="446dp"
        android:layout_marginBottom="28dp"

        android:background="#1BF18EB0"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="6dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/texto99" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="15dp"></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/texto100" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="15dp"></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/texto101" />
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="15dp"></LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>