<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Informacion">
    <Button
        android:id="@+id/regresar"
        android:layout_width="wrap_content"
        android:backgroundTint="#eed4bc"
        android:text="@string/texto65"
        android:textColor="#6E3500"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    </Button>
    <TextView
        android:id="@+id/tvBarCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/texto11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174"
        />

    <Button
        android:id="@+id/btnScanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#f8d2af"
        android:hint="@string/texto10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBarCode" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="255dp"
        android:layout_height="233dp"
        android:layout_marginTop="296dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/manosuno"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>