<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/colorrosa"
    tools:context=".CorreoActivity">
    <Button
        android:id="@+id/regresar"
        android:layout_width="wrap_content"
        android:backgroundTint="#eed4bc"
        android:text="@string/texto65"
        android:textColor="#6E3500"
        android:layout_height="wrap_content">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regresar"
        android:layout_marginTop="-6dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_home"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:text="@string/texto_ec"
            android:textColor="#000000"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="536dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_correo"
                android:textColor="#B18709"
                android:textStyle="bold"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/caja_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="correo@correo.com" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="447dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_asunto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_asunto"
                android:textColor="#B18709"
                android:textStyle="bold"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/caja_asunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="285dp"
        android:layout_marginBottom="323dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_mensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_mensaje"
                android:textColor="#B18709"
                android:textStyle="bold"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/caja_mensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="100dp"
                android:hint=""
                android:inputType="textMultiLine" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="430dp"
        android:layout_marginBottom="232dp">

        <Button
            android:id="@+id/btn_enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_btn_enviar" />

    </LinearLayout>

</RelativeLayout>